--- a/src/app/clientes/form.component.html
+++ b/src/app/clientes/form.component.html
@@ -1,3 +1,14 @@
-<div class="">
+<div class="card bg-dark text-white">
+  <div class="card-header">{{ titulo }}</div>
+  <div class="card-body"></div>
 
+  <form>
+    <div class="form-group row">
+      <label for="" class="col-form-label col-sm-2"></label>
+      <div>
+        <input type="text" class="form-control">
+      </div>
+    </div>
+    
+  </form>
 </div>
