--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,9 @@
 <app-header></app-header>
-<div class="container">
+
+<div class="container my-3 wrap">
 
 <router-outlet></router-outlet>
 
 </div>
+
 <app-footer></app-footer>
