--- a/src/styles.css
+++ b/src/styles.css
@@ -1,6 +1,6 @@
 /* You can add global styles to this file, and also import other style files */
 html{
-  position: rekatuve;
+  position: relative;
   min-height: 100%;
 }
 body{
